--- a/src/custom.css
+++ b/src/custom.css
@@ -19,15 +19,15 @@
 }
 
 .output-display {
-    background-color: #383b4b;
-    height: 700px;
+    background-color: #cdcdcd;
+    height: 100px;
 }
 
 .fas, .fa {
     cursor: pointer;
 }
 
-.background {
+/* .background {
     background-color: #272727;
     color: #747474;
-}
+} */
